--- a/views/index.ejs
+++ b/views/index.ejs
@@ -342,7 +342,7 @@
                       <ul class="contacts">
                           <li><i class="icon-location contact"></i> Christophstraße 14 </li>
                           <li><i class="icon-location contact"></i> 70178 Stuttgart </li>
-                          <li><i class="icon-mobile contact"></i> +00 (123) 456 78 90</li>
+                          <li><i class="icon-mobile contact"></i> 0711 25968278</li>
                           <li><a href="#"><i class="icon-mail-1 contact"></i> info@aisa-sonnengarten.com</a></li>
                       </ul><!-- /.contacts -->
                   </div><!-- /.col -->                  
