--- a/views/index.ejs
+++ b/views/index.ejs
@@ -332,9 +332,8 @@
                   
                   <div class="col-md-4 col-sm-6 inner">
                       <h3 class="section-subheading">营业时间<br/> ÖFFNUNGSZEITEN <span>X</span></h3>
-                        <p><em>Montag &ndash; Freitag </em>&nbsp;&nbsp;<strong>11:00am &ndash; 03:00pm</strong>&nbsp;&nbsp;<strong>05:00pm &ndash; 11:00pm</strong></p>
-                    <p><em>Samstag </em>&nbsp;&nbsp;<strong>11:00am &ndash; 03:00pm</strong>&nbsp;&nbsp;<strong>05:00pm &ndash; 11:00pm</strong></p>
-                    <p><em>Sonntag </em>&nbsp;&nbsp;<strong>05:00pm &ndash; 11:00pm</strong></p>
+                        <p><em>Montag &ndash; Samstag </em>&nbsp;&nbsp;<strong>11:00 &ndash; 15:00</strong>&nbsp;&nbsp;<strong>17:00 &ndash; 23:00</strong></p>
+                    <p><em>Sonntag </em>&nbsp;&nbsp;<strong>17:00 &ndash; 23:00</strong></p>
                   </div><!-- /.col -->
                   
                   <div class="col-md-4 col-sm-6 inner">
