--- a/views/index.ejs
+++ b/views/index.ejs
@@ -337,6 +337,7 @@
                           <li><i class="icon-location contact"></i> Christophstraße 14 </li>
                           <li><i class="icon-location contact"></i> 70178 Stuttgart </li>
                           <li><i class="icon-mobile contact"></i> 0711 25968278</li>
+                          <li><i class="icon-mobile contact"></i> 015204201988</li>
                           <li><a href="#"><i class="icon-mail-1 contact"></i> info@aisa-sonnengarten.com</a></li>
                       </ul><!-- /.contacts -->
                   </div><!-- /.col -->                  
