--- a/views/index.ejs
+++ b/views/index.ejs
@@ -190,6 +190,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 wow fadeInUp signup_form">
                       <form id="bookForm" method="POST" class="form form-table text-center" name="table_reservation" novalidate>
+                        <input type="hidden" id="_csrf" name="_csrf" value="<%= csrfToken %>">
                         <div class="row">
                           <div class="col-lg-6 col-md-6 form-group">
                             <label class="sr-only" for="first_name1">名 Vorname</label>
@@ -348,10 +349,10 @@
               <div class="container inner">
                   <p class="pull-left">&copy; 2018 Asia Sonnengarten Stuttgart. All rights reserved.</p>
                   <ul class="footer-menu pull-right">
-                      <li><a href="index.html#menus">菜单 Menu</a></li>
-                      <li><a href="index.html#book">预定 Reservierung</a></li>
-                      <li><a href="index.html#gallery">菜式 Küchen</a></li>
-                      <li><a href="index.html#footer">联系我们 Kontakt</a></li>
+                      <li><a href="#menus">菜单 Menu</a></li>
+                      <li><a href="#book">预定 Reservierung</a></li>
+                      <li><a href="#gallery">菜式 Küchen</a></li>
+                      <li><a href="#footer">联系我们 Kontakt</a></li>
                   </ul><!-- .footer-menu -->
               </div><!-- .container -->
           </div><!-- .footer-bottom -->
@@ -463,7 +464,7 @@
     <script src="/assets/js/plugins/jqBootstrapValidation.js"></script>
 
    <!-- Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGXgOKKnKwmZCFKKyr0DhLbXrKn9cHkXk" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx3b8-RJ7DkePXHfr2HLO99fOiESKwRKs" async defer></script>
     
     <!-- Foodster JavaScript -->
     <script src="/assets/js/foodster.js"></script>
