--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="author" content="abysmli">
+    <meta name="keywords" content="斯图加东方红,Stutgart Sonnen Garten,Stuttgart,Sonnen Garten,Chinesisches Restaurant,斯图加东方红中餐，斯图加特，中餐馆" />
+    <meta name="description" content="Küchenchef Wang präsentiert die Kreationen einer aromareichen Kantonesische Küche. Er kombiniert dabei treffsicher die Küchenstile rund um den kantonesischen Küchen. Fine Dining mit Aussicht. 质感与口感的完美交融，加上极具心思的装饰摆设，王师傅的精湛厨艺定能深深触动您的味蕾，更足以让任何美食家食指大动。" />
+    <!-- mobile settings -->
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
     <title>Sonnen Garten Stuttgart 斯图加东方红中餐</title>
-
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Retina.js -->
     <!-- WARNING: Retina.js doesn't work if you view the page via file:// -->
     <script src="/assets/js/plugins/retina.min.js"></script>
