--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,15 @@
 
     <!-- Your custom CSS -->
     <link href="/assets/css/custom.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-71308807-3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-71308807-3');
+    </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -467,7 +476,7 @@
     <script src="/assets/js/plugins/jqBootstrapValidation.js"></script>
 
    <!-- Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx3b8-RJ7DkePXHfr2HLO99fOiESKwRKs" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE6SAbrHJ9FZzw8YrfMjkmtIq85DvyfTc" async defer></script>
     
     <!-- Foodster JavaScript -->
     <script src="/assets/js/foodster.js"></script>
