--- a/views/index.ejs
+++ b/views/index.ejs
@@ -284,16 +284,14 @@
                 <img src="/images/dishes/3.jpg"alt="" data-no-retina>
             </div>
             <!-- End slide -->
+            <!-- Start slide -->
             <div class="item">
                 <img src="/images/dishes/4.jpg"alt="" data-no-retina>
             </div>
             <!-- End slide -->
+            <!-- Start slide -->
             <div class="item">
                 <img src="/images/dishes/5.jpg"alt="" data-no-retina>
-            </div>
-            <!-- End slide -->
-            <div class="item">
-                <img src="/images/dishes/6.jpg"alt="" data-no-retina>
             </div>
             <!-- End slide -->
           </div><!-- /.carousel-inner -->
