change email address

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -175,7 +175,6 @@
                     <h2 class="section-heading wow fadeInDown">为您准备的粤式菜单</h2>
                     <h3 class="section-subheading wow fadeInDown">Wählen Sie ein Menü aus</h3>
                     <ul class="wow fadeInUp">
-                        <li><a href="#menuModal1" data-toggle="modal">午餐 (Lunch)</a></li>
                         <li><a href="#menuModal2" data-toggle="modal">晚餐 (Dinner)</a></li>
                         <li><a href="#menuModal3" data-toggle="modal">中文菜单</a></li>
                     </ul>
@@ -349,7 +348,7 @@
                           <li><i class="icon-location contact"></i> 70178 Stuttgart </li>
                           <li><i class="icon-mobile contact"></i> 0711 25968278</li>
                           <li><i class="icon-mobile contact"></i> 015204201988</li>
-                          <li><a href="#"><i class="icon-mail-1 contact"></i> info@aisa-sonnengarten.com</a></li>
+                          <li><a href="#"><i class="icon-mail-1 contact"></i> info@asia-sonnengarten.com</a></li>
                       </ul><!-- /.contacts -->
                   </div><!-- /.col -->                  
               </div><!-- /.row --> 
@@ -368,31 +367,6 @@
           </div><!-- .footer-bottom -->
     </footer><!-- footer -->
     <!-- End Footer Section -->
-    <!-- Menu modal -->
-    <div class="popup-modal modal fade" id="menuModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- News Article Goes Here -->
-                            <span class="section-icon">a</span>
-                            <h2 class="section-heading">Mittagessen</h2>
-                            <img class="img-responsive img-centered" src="/images/menu/Asia-Garten-Menu1.jpg" alt="" data-no-retina>
-                            <img class="img-responsive img-centered" src="/images/menu/Asia-Garten-Menu.jpg" alt="" data-no-retina>
-                        </div>
-                    </div>
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </div><!-- /.modal-content -->
-    </div>
-    <!-- End menu modal -->
     <!-- Menu modal -->
     <div class="popup-modal modal fade" id="menuModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
