--- a/views/index.ejs
+++ b/views/index.ejs
@@ -175,8 +175,8 @@
                     <h2 class="section-heading wow fadeInDown">为您准备的粤式菜单</h2>
                     <h3 class="section-subheading wow fadeInDown">Wählen Sie ein Menü aus</h3>
                     <ul class="wow fadeInUp">
-                        <li><a href="#menuModal2" data-toggle="modal">晚餐 (Dinner)</a></li>
-                        <li><a href="#menuModal3" data-toggle="modal">中文菜单</a></li>
+                        <li><a href="#menuModal2" data-toggle="modal"></a></li>
+                        <li><a href="#menuModal3" data-toggle="modal"></a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12">
